--- a/modfile.cabal
+++ b/modfile.cabal
@@ -39,6 +39,25 @@ test-suite modfile-test
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
+executable example-readit
+  main-is:             readIT.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
+executable example-readxm
+  main-is:             readXM.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
+
 source-repository head
   type:     git
   location: https://github.com/riottracker/modfile
