--- a/modfile.cabal
+++ b/modfile.cabal
@@ -10,7 +10,7 @@ maintainer:          kohlrabi@kohlra.biz
 copyright:           2016 kohlrabi
 category:            music
 build-type:          Simple
-extra-source-files:  examples/readIT.hs, examples/readXM.hs
+extra-source-files:  examples/readIT.hs, examples/readXM.hs, examples/readS3M.hs
 cabal-version:       >=1.10
 
 library
@@ -59,6 +59,14 @@ executable example-readxm
   hs-source-dirs:      examples
   default-language:    Haskell2010
 
+executable example-reads3m
+  main-is:             readS3M.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
 
 source-repository head
   type:     git
