--- a/modfile.cabal
+++ b/modfile.cabal
@@ -35,6 +35,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , binary
                      , split
+                     , monad-loops
   default-language:    Haskell2010
 
 test-suite modfile-test
