--- a/modfile.cabal
+++ b/modfile.cabal
@@ -15,7 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Codec.Tracker.IT
+  exposed-modules:     Codec.Tracker.Format
+                     , Codec.Tracker.IT
                      , Codec.Tracker.IT.Instrument
                      , Codec.Tracker.IT.Pattern
                      , Codec.Tracker.IT.Header
@@ -34,6 +35,7 @@ library
   other-modules:       Util
   build-depends:       base >= 4.7 && < 5
                      , binary
+                     , bytestring
                      , split
                      , monad-loops
   default-language:    Haskell2010
