--- a/modfile.cabal
+++ b/modfile.cabal
@@ -32,7 +32,7 @@ library
                      , Codec.Tracker.S3M.Instrument.PCM
                      , Codec.Tracker.S3M.Instrument.Adlib
                      , Codec.Tracker.S3M.Pattern
-  other-modules:       Util
+  other-modules:       Util, Codec.Tracker.Common
   build-depends:       base >= 4.7 && < 5
                      , binary
                      , bytestring
