--- a/modfile.cabal
+++ b/modfile.cabal
@@ -82,6 +82,15 @@ executable example-reads3m
   hs-source-dirs:      examples
   default-language:    Haskell2010
 
+executable example-puts3m
+  main-is:             putS3M.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/riottracker/modfile
