--- a/modfile.cabal
+++ b/modfile.cabal
@@ -91,6 +91,15 @@ executable example-puts3m
   hs-source-dirs:      examples
   default-language:    Haskell2010
 
+executable example-putxm
+  main-is:             putXM.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/riottracker/modfile
