--- a/modfile.cabal
+++ b/modfile.cabal
@@ -100,6 +100,15 @@ executable example-putxm
   hs-source-dirs:      examples
   default-language:    Haskell2010
 
+executable example-putit
+  main-is:             putIT.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/riottracker/modfile
