--- a/modfile.cabal
+++ b/modfile.cabal
@@ -109,6 +109,33 @@ executable example-putit
   hs-source-dirs:      examples
   default-language:    Haskell2010
 
+executable example-tests3m
+  main-is:             testS3M.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
+executable example-testxm
+  main-is:             testXM.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
+executable example-testit
+  main-is:             testIT.hs
+  build-depends:       base >= 4.7 && < 5
+                     , modfile
+                     , binary
+                     , bytestring
+  hs-source-dirs:      examples
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/riottracker/modfile
